Add the products container with some css styling to it. This commit includes the resized images

--- a/index.html
+++ b/index.html
@@ -8,11 +8,38 @@
 <body>
   <div class="header-container">
     <div class="brand">Inmunotek Colombia</div>
-    <ul> 
+    <ul class="header-links"> 
       <li> <a href="#">Main</a></li>
       <li> <a href="#">Blog</a></li>
       <li> <a href="#">Contact</a></li>    
     </ul>
+  </div>
+  <div class="sub-header-container">
+    <div class="left-sub-content">
+      <div class="sub-title">About Us</div>
+      <div class="sub-text"> INMUNOTEK COLOMBIA is a pharmaceutical laboratory located in the city of Santiago de Cali, Colombia. The company commercializes products in the field of allergy and immunology for the diagnosis and treatment of human pathologies. Operations began in Colombia in March 2013. Since its creation, our goal has been to offer top quality, innovative and competitive products useful for the health professional, and safe and effective for the patients. </div>
+      <button>Register to Our Newsletter</button>
+    </div>
+    <div class="right-sub-img">     
+      <img class="plant" src="./img/left-sub-img.jpg" alt="A plant in a field."> 
+    </div>
+  <div class="top-middle-container full-bleed">
+    <div class="middle-subtitle"> Our Products </div>
+    <ul class="image-list">
+      <li><a href="#"><img src="./img/pet.jpg" alt="A beautiful dog on a field."></a></li>
+      <li><a href="#"><img src="./img/Food.jpg" alt="Some berries, an egg, and some chocolate."></a></li>
+      <li><a href="#"><img src="./img/skincare.jpg" alt="A jar of skincare cream lying on a basket."></a></li>
+      <li><a href="#"><img src="./img/pricktest.jpg" alt="Person holding dropper."></a></li>
+    </ul>
+    <ul class="product-list">
+      <li>Pet Allergy Diagnosis<br>and Treatment</li>
+      <li>Food Allergy Diagnosis<br>and Treatment</li>
+      <li>Allergy Safe Skincare<br>Products</li>
+      <li>Allergy Skin-Test Prick<br> Test</li>    
+    </ul>
+  </div>
+
+
   </div>
    
 
