Add the quote and ask a question containers and change the font for the webpage

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <div class="sub-header-container">
     <div class="left-sub-content">
       <div class="sub-title">About Us</div>
-      <div class="sub-text"> INMUNOTEK COLOMBIA is a pharmaceutical laboratory located in the city of Santiago de Cali, Colombia. The company commercializes products in the field of allergy and immunology for the diagnosis and treatment of human pathologies. Operations began in Colombia in March 2013. Since its creation, our goal has been to offer top quality, innovative and competitive products useful for the health professional, and safe and effective for the patients. </div>
+      <div class="sub-text"> INMUNOTEK COLOMBIA is a pharmaceutical laboratory located in the city of Santiago de Cali, Colombia. The company commercializes products in the field of allergy and immunology for the diagnosis and treatment of human pathologies.</div>
       <button>Register to Our Newsletter</button>
     </div>
     <div class="right-sub-img">     
       <img class="plant" src="./img/left-sub-img.jpg" alt="A plant in a field."> 
-    </div>
+  </div>
   <div class="top-middle-container full-bleed">
     <div class="middle-subtitle"> Our Products </div>
     <ul class="image-list">
@@ -38,14 +38,19 @@
       <li>Allergy Skin-Test Prick<br> Test</li>    
     </ul>
   </div>
-
-
+  <div class="bottom-middle-container full-bleed-two">
+    <p class="quote"> I have not suffered from an allergy attack in more than a year. Since starting with immunotherapy I've been able to play with my dogs and not suffer any adverse effects. It has changed my life! It has freed me from the confines of my home and the need for medications.</p> 
+    <p class="patient"> - Patient, Bogotá, Colombia. </p>
   </div>
-   
-
-
-
-
+  <div class="call-to-action full-bleed-three">
+    <div class="within">
+      <div class="left-info">
+        <div class="sub-title-call">Ask us a question!</div>
+        <div class="text-call"> We will be happy to get back to you as soon as possible with all the latest info about our products!</div>  
+      </div>
+      <div class="right-info"><button>Ask Here!</button></div>
+    </div>    
+</div>
 
 
 
