Add the footer and copyright

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
     <div class="right-sub-img">     
       <img class="plant" src="./img/left-sub-img.jpg" alt="A plant in a field."> 
+    </div>
   </div>
   <div class="top-middle-container full-bleed">
     <div class="middle-subtitle"> Our Products </div>
@@ -50,10 +51,10 @@
       </div>
       <div class="right-info"><button>Ask Here!</button></div>
     </div>    
-</div>
-
-
-
+  </div>
+  <div class="footer">
+    <p class="closing"> Copyright © Andrés Ladino - 2023</p>
+  </div>
 </body>
 
 </html>
