Modify overall webpage padding to correct containers and background colors

--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
       <img class="plant" src="./img/left-sub-img.jpg" alt="A plant in a field."> 
     </div>
   </div>
-  <div class="top-middle-container full-bleed">
-    <div class="middle-subtitle"> Our Products </div>
-    <ul class="image-list">
-      <li><a href="#"><img src="./img/pet.jpg" alt="A beautiful dog on a field."></a></li>
-      <li><a href="#"><img src="./img/Food.jpg" alt="Some berries, an egg, and some chocolate."></a></li>
-      <li><a href="#"><img src="./img/skincare.jpg" alt="A jar of skincare cream lying on a basket."></a></li>
-      <li><a href="#"><img src="./img/pricktest.jpg" alt="Person holding dropper."></a></li>
-    </ul>
-    <ul class="product-list">
-      <li>Pet Allergy Diagnosis<br>and Treatment</li>
-      <li>Food Allergy Diagnosis<br>and Treatment</li>
-      <li>Allergy Safe Skincare<br>Products</li>
-      <li>Allergy Skin-Test Prick<br> Test</li>    
-    </ul>
-  </div>
-  <div class="bottom-middle-container full-bleed-two">
+    <div class="top-middle-container">
+      <div class="middle-subtitle"> Our Products </div>
+      <ul class="image-list">
+        <li><a href="#"><img src="./img/pet.jpg" alt="A beautiful dog on a field."></a></li>
+        <li><a href="#"><img src="./img/Food.jpg" alt="Some berries, an egg, and some chocolate."></a></li>
+        <li><a href="#"><img src="./img/skincare.jpg" alt="A jar of skincare cream lying on a basket."></a></li>
+        <li><a href="#"><img src="./img/pricktest.jpg" alt="Person holding dropper."></a></li>
+      </ul>
+      <ul class="product-list">
+        <li>Pet Allergy Diagnosis<br>and Treatment</li>
+        <li>Food Allergy Diagnosis<br>and Treatment</li>
+        <li>Allergy Safe Skincare<br>Products</li>
+        <li>Allergy Skin-Test Prick<br> Test</li>    
+      </ul>
+    </div>
+  <div class="bottom-middle-container">
     <p class="quote"> I have not suffered from an allergy attack in more than a year. Since starting with immunotherapy I've been able to play with my dogs and not suffer any adverse effects. It has changed my life! It has freed me from the confines of my home and the need for medications.</p> 
     <p class="patient"> - Patient, Bogotá, Colombia. </p>
   </div>
-  <div class="call-to-action full-bleed-three">
+  <div class="call-to-action">
     <div class="within">
       <div class="left-info">
         <div class="sub-title-call">Ask us a question!</div>
